fixed spacing of logos and photos

--- a/styles.css
+++ b/styles.css
@@ -81,14 +81,15 @@ ul {
   display: inline;
 }
 .logos{
-  padding-left: 20%;
-  padding-right: 20%;
+  margin-left: 20%;
+  margin-right: 20%;
 
 }
 .icon {
-  margin: 20px;
-  height: 120px;
-  width: 120px;
+  height: 15%;
+  width: 15%;
+  margin-left: 10%;
+  padding-top: 40px;
 }
 .container {
   background-position: center;
@@ -147,7 +148,7 @@ ul {
 }
 
 .projects img{
-  margin-left: 25%;
+  margin-left: 30%;
   margin-right: 25%;
   outline-style: solid;
   outline-color: teal;
